--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
 
-     <!-- Firebase Reference -->
+    <!-- Firebase Reference -->
     <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
-    
+
     <!-- Added Moment JS -->
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 
@@ -40,17 +40,16 @@
 
             <!-- Current Employees-->
             <div class="card mb-4">
-                <div class="card-header">Current Employees</div>
+                <div class="card-header">Current Train Schedule</div>
                 <div class="card-body">
                     <table class="table table-sm table-hover" id='employee-table'>
                         <thead>
                             <tr>
-                                <th scope="col">Employee Name</th>
-                                <th scope="col">Role</th>
-                                <th scope="col">Start Date</th>
-                                <th scope="col">Months Worked</th>
-                                <th scope="col">Monthly Rate ($)</th>
-                                <th scope="col">Total Billed ($)</th>
+                                <th scope="col">Train Name</th>
+                                <th scope="col">Destination</th>
+                                <th scope="col">Frequency (min)</th>
+                                <th scope="col">Next Arrivals</th>
+                                <th scope="col">Minutes Away</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -59,6 +58,41 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <!-- Add Employee  -->
+            <div class="card mb-4">
+                <div class="card-header">Add Train</div>
+                <div class="card-body">
+
+                    <!-- Entry Form -->
+                    <form>
+                        <div class="form-group">
+                            <label for="employee-name-input">Train Name</label>
+                            <input class="form-control" id="train-name-input" type="text">
+                        </div>
+                        <div class="form-group">
+                            <label for="role-input">Destination</label>
+                            <input class="form-control" id="destination-input"type="text">
+                        </div>
+                        <div class="form-group">
+                            <label for="start-input">First Train Time (HH:mm - military time)</label>
+                            <input class="form-control" id="first-train-input" type="text">
+                        </div>
+                        <div class="form-group">
+                            <label for="rate-input">Frequency</label>
+                            <input class="form-control" id="frequency-input" type="text">
+                        </div>
+                        <button class="btn btn-primary" id="add-train-btn">Submit</button>
+                    </form>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
     </div>
 
 
