--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
             <div class="card mb-4">
                 <div class="card-header">Current Train Schedule</div>
                 <div class="card-body">
-                    <table class="table table-sm table-hover" id='employee-table'>
+                    <table class="table table-sm table-hover" id='train-table'>
                         <thead>
                             <tr>
                                 <th scope="col">Train Name</th>
                                 <th scope="col">Destination</th>
                                 <th scope="col">Frequency (min)</th>
-                                <th scope="col">Next Arrivals</th>
+                                <th scope="col">Next Arrival</th>
                                 <th scope="col">Minutes Away</th>
                             </tr>
                         </thead>
@@ -82,7 +82,7 @@
                             <input class="form-control" id="first-train-input" type="text">
                         </div>
                         <div class="form-group">
-                            <label for="rate-input">Frequency</label>
+                            <label for="rate-input">Frequency (minutes)</label>
                             <input class="form-control" id="frequency-input" type="text">
                         </div>
                         <button class="btn btn-primary" id="add-train-btn">Submit</button>
