--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                                 <th scope="col">Frequency (min)</th>
                                 <th scope="col">Next Arrival</th>
                                 <th scope="col">Minutes Away</th>
+                                <th scope="col">Remove Train</th>
                             </tr>
                         </thead>
                         <tbody>
