--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.7.3/firebase.js"></script>
 
     <!-- Added Moment JS -->
-    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 
 </head>
 
